docs/development/mypy_snapshots/mypy_snapshot_2025-08-23T07-58-07Z.txt
src/data_integration/dukascopy_ingestor.py:24: error: Library stubs not
installed for "requests"  [import-untyped]
    import requests
    ^
src/data_integration/dukascopy_ingestor.py:24: note: Hint: "python3 -m pip install types-requests"
src/data_integration/dukascopy_ingestor.py:24: note: (or run "mypy --install-types" to install all missing stub packages)
src/data_integration/dukascopy_ingestor.py:24: note: See https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
src/market_intelligence/dimensions/enhanced_anomaly_dimension.py: error: Source
file found twice under different module names:
"src.market_intelligence.dimensions.enhanced_anomaly_dimension" and
"market_intelligence.dimensions.enhanced_anomaly_dimension"
src/market_intelligence/dimensions/enhanced_anomaly_dimension.py: note: See https://mypy.readthedocs.io/en/stable/running_mypy.html#mapping-file-paths-to-modules for more info
src/market_intelligence/dimensions/enhanced_anomaly_dimension.py: note: Common resolutions include: a) adding `__init__.py` somewhere, b) using `--explicit-package-bases` or adjusting MYPYPATH
Found 2 errors in 2 files (errors prevented further checking)
